# backend/internal/models/jurusan.go
@@ -1,0 +1,8 @@
+package models
+
+type Jurusan struct {
+	IDJurusan   int    `json:"id_jurusan"`
+	NamaJurusan string `json:"nama_jurusan"`
+	Fakultas    string `json:"fakultas"`
+	Jenjang     string `json:"jenjang"`
+}
